update software page

--- a/_html/public/software.html
+++ b/_html/public/software.html
@@ -180,6 +180,73 @@
         </section>
         <!--steps-->
 
+        <section class="process">
+            <div class="container">
+                <div class="content">
+                    <div class="flex">
+                        <div class="process__head">
+                            <h3>Todo o processo de criação é integrado para garantir um desenvolvimento eficiente e com a garantia de uma excelente ferramenta de gestão para sua empresa e os benefícios são visíveis:</h3>
+                        </div><!--process__head-->
+                    </div>
+                    <!--flex-->
+                    <div class="flex flex--wrap flex--center process__box">
+                        <div class="process__box__card flex">
+                            <p>Menor chance de erros</p>
+                        </div>
+                        <!--process__box__card-->
+                        <div class="process__box__card flex">
+                            <p>Redução de custos</p>
+                        </div>
+                        <!--process__box__card-->
+                        <div class="process__box__card flex">
+                            <p>Controle de estoque ou insumos</p>
+                        </div>
+                        <!--process__box__card-->
+                        <div class="process__box__card flex">
+                            <p>Controle de prazos</p>
+                        </div>
+                        <!--process__box__card-->
+                        <div class="process__box__card flex">
+                            <p>Seu sistema legado</p>
+                        </div>
+                        <!--process__box__card-->
+                        <div class="process__box__card flex">
+                            <p>Suporte e sustentação do sistema</p>
+                        </div>
+                        <!--process__box__card-->
+                    </div>
+                    <!--flex-->
+                </div>
+            </div>
+        </section>
+        <!--process-->
+
+        <section class="resource">
+            <div class="container">
+                <div class="content">
+                    <div class="flex flex--wrap">
+                        <div class="resource__box flex flex--column flex--start flex--center">
+                            <h3>Designer Poderoso</h3>
+                            <p>Elaboramos um design de interface poderoso para seu sistema/ software, pois isso interfere diretamente no sucesso da sua aplicação.</p>
+                        </div>
+                        <!--resource__box-->
+                        <div class="resource__box flex flex--column flex--start flex--center">
+                            <h3>Melhores Tecnologias</h3>
+                            <p>Usamos só as melhores e mais atualizadas tecnologias existentes no mercado para que sua aplicação possa acompanhar o crescimento do seu negócio.</p>
+                        </div>
+                        <!--resource__box-->
+                        <div class="resource__box flex flex--column flex--start flex--center">
+                            <h3>Garantia de 1 ano</h3>
+                            <p>Nós somos a única empresa que garante um ano de garantia no seu projeto, pois batemos no peito que entregamos uma aplicação 100% estável.</p>
+                        </div>
+                        <!--resource__box-->
+                    </div>
+                    <!--flex-->
+                </div>
+            </div>
+        </section>
+        <!--resources-->
+
     </main>
     <!--main-->
 
